update hero content

--- a/content/en/1.index.md
+++ b/content/en/1.index.md
@@ -1,10 +1,7 @@
 ::home
 #hero_title
-The efficiency of one, the talent of three.
-Why look elsewhere?
+### **Crafting Digital Experiences**
 
 #hero_subtitle
-Developer, art director and photographer, I fuse technicality and aestheticism to bring a unique dimension 
-to my work. Passionate about beauty, I give life to projects that captivate and convert
+Developer, digital artist, and music producer, I blend technical expertise with creative vision to create interactive multimedia applications. Passionate about innovation, I bring life to projects that engage and inspire.
 ::
-
