remove extra bold

--- a/content/en/1.index.md
+++ b/content/en/1.index.md
@@ -1,6 +1,6 @@
 ::home
 #hero_title
-### **Crafting Digital Experiences**
+### Crafting Digital Experiences
 
 #hero_subtitle
 Developer, digital artist, and music producer, I blend technical expertise with creative vision to create interactive multimedia applications. Passionate about innovation, I bring life to projects that engage and inspire.
