Update about me content

--- a/content/en/4.about.md
+++ b/content/en/4.about.md
@@ -10,30 +10,25 @@ About
 A few words about me
 
 #intro
-Developer and art director based in Nice, France
+Software Engineer and Web Developer with a passion for creating interactive multimedia applications. With expertise in JavaScript, TypeScript, React, Vue.js, and AWS services, I build dynamic and responsive digital experiences that engage users and deliver value. My background in higher education has honed my ability to design, implement, and deliver innovative solutions that support and enhance learning initiatives.
 
-With over 6 years of experience in the field, I enjoy blending beauty, design and technology to create unique, bespoke web experiences that exceed my clients' expectations.
+Beyond my technical work, I am deeply passionate about digital art and music production. In my free time, I experiment with sound design in Ableton, drawing inspiration from artists like Aphex Twin and Autechre. I'm also an avid hiker and environmentalist, committed to sustainability and inspired by the natural beauty of the Pacific Northwest.
 
-Whether collaborating with teams or leading design projects, my attention to detail and dedication to excellence have earned me a reputation for delivering exceptional results.
-
-Even when I'm not working for my clients, I'm always looking for new things to learn and experiment with. I continue to develop my design and development skills by working on personal projects, reading books, etc...
+Explore my projects to see how I combine creativity and technical skills to build impactful digital experiences. Let's connect and create something amazing together!
 
 #experiences
   :::experiences
   ---
   experiences:
-    - title: Front-End Developer
-      company: 360&1
-      date: 2021 - Today
-    - title: CTO
-      company: Helpr
-      date: 2023 - Today
-    - title: Artistic Director
-      company: Maison Hochard
-      date: 2022 - Today
     - title: Web Developer
-      company: Freelance
-      date: 2019 - Today
+      company: Oregon State University Ecampus
+      date: 2021 - Today
+    - title: Analyst Programmer
+      company: Oregon State University
+      date: 2018 - 2021
+    - title: Software Engineer
+      company: Hazel Analytics
+      date: 2014 - 2017
   ---
   :::
 
