Update hero subtitle

--- a/content/en/1.index.md
+++ b/content/en/1.index.md
@@ -3,5 +3,5 @@
 Crafting Digital Experiences
 
 #hero_subtitle
-Developer, digital artist, and sound designer, I blend technical expertise with creative vision to create interactive multimedia applications. Passionate about innovation, I bring life to projects that engage and inspire.
+Web Developer with a keen interest in math and media design. I blend technical expertise with creative vision to create interactive multimedia applications. Passionate about innovation, I bring life to projects that engage and inspire.
 ::
