--- a/content/en/1.index.md
+++ b/content/en/1.index.md
@@ -3,7 +3,7 @@
 Crafting Digital Experiences
 
 #hero_subtitle
-Web Developer with a keen interest in math and media design.
+Web Developer with a keen interest in front-end technologies, math and media design.
 
-I blend technical expertise with creative vision to create interactive multimedia applications. Passionate about innovation, I bring life to projects that engage and inspire.
+I blend technical expertise with creative vision to create interactive multimedia applications. Passionate about learning, I bring life to projects that innovate, engage and inspire.
 ::
