intro page content

--- a/locales/en/global.json
+++ b/locales/en/global.json
@@ -10,6 +10,7 @@
   "command": "Available commands",
   "not_found": "Command not found",
   "see_more": "See more",
+  "read_more_about_me": "Learn more about me",
   "soon": "Coming soon",
   "experiences": "Experiences",
   "contact": "Let's work together",
