About.md content

--- a/content/en/4.about.md
+++ b/content/en/4.about.md
@@ -10,11 +10,13 @@ About
 A few words about me
 
 #intro
-Software Engineer and Web Developer with a passion for creating interactive multimedia applications. With expertise in JavaScript, TypeScript, React, Vue.js, and AWS services, I build dynamic and responsive digital experiences that engage users and deliver value. My background in higher education has honed my ability to design, implement, and deliver innovative solutions that support and enhance learning initiatives.
+Software Engineer and Web Developer with a passion for creating interactive multimedia applications. With expertise in JavaScript, TypeScript, React, Vue.js, and AWS services, I specialize in building engaging web applications featuring interactive visualizations and simulations. At the moment, I am particularly interested in front-end frameworks, web-based graphics, and media design.
 
-Beyond my technical work, I am deeply passionate about digital art and music production. In my free time, I experiment with sound design in Ableton, drawing inspiration from artists like Aphex Twin and Autechre. I'm also an avid hiker and environmentalist, committed to sustainability and inspired by the natural beauty of the Pacific Northwest.
+My background in higher education has refined my ability to design, implement, and deliver innovative solutions across diverse domains, including mathematics, physics, and chemistry, to support and enhance educational initiatives.
 
-Explore my projects to see how I combine creativity and technical skills to build impactful digital experiences. Let's connect and create something amazing together!
+Beyond my technical work, I am deeply passionate about digital art and music production. In my free time, I experiment with sound design in Ableton, drawing inspiration from artists like Aphex Twin and Autechre. Additionally, I am an amateur naturalist, fascinated by observing the botanical, mycological, and geological features of different areas.
+
+Explore my projects to see how I combine creativity and technical expertise to build impactful digital experiences. Let's connect and create something exciting together.
 
 #experiences
   :::experiences
@@ -38,5 +40,5 @@ Explore my projects to see how I combine creativity and technical skills to buil
 Stack
 
 #stack_description
-Some of the software and technologies I use on a daily basis
+Some of the software and technologies I use regularly
 ::
