--- a/content/en/1.index.md
+++ b/content/en/1.index.md
@@ -3,7 +3,6 @@
 Crafting Digital Experiences
 
 #hero_subtitle
-Web Developer with a keen interest in front-end technologies, mathematics, and media design. 
-A passionate lifelong learner, I bring life to projects that innovate, captivate, and inspire.
+Web Developer with a keen interest in front-end technologies, mathematics, and media design. An enthusiastic learner, I am dedicated to creating projects that innovate, engage, and inspire.
 
 ::
