--- a/content/en/4.about.md
+++ b/content/en/4.about.md
@@ -12,7 +12,7 @@ A few words about me
 #intro
 Software Engineer and Web Developer with a passion for creating interactive multimedia applications. With expertise in JavaScript, TypeScript, React, Vue.js, and AWS services, I specialize in building engaging web applications featuring interactive visualizations and simulations. At the moment, I am particularly interested in front-end frameworks, web-based graphics, and media design.
 
-My background in higher education has refined my ability to design, implement, and deliver innovative solutions across diverse domains, including mathematics, physics, and chemistry, to support and enhance educational initiatives.
+My background in higher education has refined my ability to design, implement, and deliver innovative solutions across diverse domains, including mathematics, physics, engineering, and chemistry, to support and enhance educational initiatives.
 
 Beyond my technical work, I am deeply passionate about digital art and music production. In my free time, I experiment with sound design in Ableton, drawing inspiration from artists like Aphex Twin and Autechre. Additionally, I am an amateur naturalist, fascinated by observing the botanical, mycological, and geological features of different areas.
 
