Rename works to projects #8

--- a/locales/en/navigation.json
+++ b/locales/en/navigation.json
@@ -1,6 +1,6 @@
 {
   "home": "Home",
-  "works": "Works",
+  "works": "Projects",
   "writing": "Writing",
   "stack": "Stack",
   "about": "About",
