Update about page

--- a/content/en/4.about.md
+++ b/content/en/4.about.md
@@ -10,13 +10,13 @@ About
 A few words about me
 
 #intro
-Software Engineer and Web Developer with a passion for creating interactive multimedia applications. With expertise in JavaScript, TypeScript, React, Vue.js, and AWS services, I specialize in building engaging web applications featuring interactive visualizations and simulations. At the moment, I am particularly interested in front-end frameworks, web-based graphics, and media design.
+My name is Victor Zellweger, and I am a Software Engineer passionate about creating interactive multimedia applications. With expertise in JavaScript, TypeScript, React, Vue.js, and AWS services, I build engaging web applications featuring interactive visualizations and simulations. At the moment, I am particularly interested in front-end frameworks, web-based graphics, and media design.
 
 My background in higher education has refined my ability to design, implement, and deliver innovative solutions across diverse domains, including mathematics, physics, engineering, and chemistry, to support and enhance educational initiatives.
 
 Beyond my technical work, I am deeply passionate about digital art and music production. In my free time, I experiment with sound design in Ableton, drawing inspiration from artists like Aphex Twin and Autechre. Additionally, I am an amateur naturalist, fascinated by observing the botanical, mycological, and geological features of different areas.
 
-Explore my projects to see how I combine creativity and technical expertise to build impactful digital experiences. Let's connect and create something exciting together.
+Explore my projects to see how I combine creativity and technical expertise to build impactful digital experiences. Let's connect and create something exciting together!
 
 #experiences
   :::experiences
