1 change by Nuxt Studio

--- a/content/en/1.index.md
+++ b/content/en/1.index.md
@@ -3,6 +3,5 @@
 Crafting Digital Experiences
 
 #hero_subtitle
-Web Developer with a keen interest in front-end technologies, mathematics, and media design. An enthusiastic learner, I am dedicated to creating projects that innovate, engage, and inspire.
-
+Web Applications Developer specializing in TypeScript, Vue/Nuxt, and AI-driven development. Experienced in building novel UI patterns and simulation-based learning tools for the web.
 ::
