1 change by Nuxt Studio

--- a/content/en/1.index.md
+++ b/content/en/1.index.md
@@ -3,5 +3,5 @@
 Crafting Digital Experiences
 
 #hero_subtitle
-Web Applications Developer specializing in TypeScript, Vue/Nuxt, and AI-driven development. Experienced in building novel UI patterns and simulation-based learning tools for the web.
+Web Applications Developer specializing in TypeScript, Vue/Nuxt, and AI-driven development. I am currently building interactive learning tools with novel UI patterns for online higher education.
 ::
